# ECE213-Phylogenetic-Tree-Using-Mash

./: CMakeLists.txt  README.md  compare_nwk.py  count_nodes.py  data.treefile.nwk  op.txt  runCommands.sh  tree_dipper.nwk
src/: findgpu.cu  gpuProperty.cu  kmer.cu  main.cpp  mash.cu  masterHeader.cuh  memTransfer.cu  murmur3Hash.cu  neighborJoining.cu  newickHelper.cpp  newickHelper.hpp  timer.hpp  twoBitCompressor.cpp  twoBitCompressor.hpp
